fix scrollbar

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -222,5 +222,5 @@
 
 html, body {
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
